# s9r-old

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Makefile  audio.cpp  audio.h  common.h  draw.cpp  draw.h  envelope.cpp  envelope.h  fifo.cpp  fifo.h  filter.cpp  filter.h  keyctrl.cpp  keyctrl.h  main.c  main.cpp  midi.cpp  midi.h  screen_ui.cpp  screen_ui.h  synth.cpp  synth.h  voice.cpp  voice.h  waveform.cpp  waveform.h
tests/: CMakeLists.txt  audioTest.cpp  fifoTest.cpp  filterTest.cpp  gtest_example.cpp  midiTest.cpp  synthTest.cpp  waveformTest.cpp
tests/mock/: audioMock.cpp
